--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -19,6 +19,9 @@
     <!-- Your custom CSS -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <link rel="icon" href="{{ url_for('static', filename='images/favicon.ico') }}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/detections.css') }}" rel="stylesheet">
 
     {% block head %}{% endblock %}
 </head>
@@ -36,36 +39,36 @@
                     <span>Dashboard</span>
                 </a>
             </li>
-            <li>
-                <a href="/detections" class="nav-link">
+            <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('pages.detections') }}">
                     <i class="fas fa-binoculars"></i>
-                    <span>Detections</span>
+                    <span>Detection engine</span>
                 </a>
             </li>
             <li>
                 <a href="/cameras" class="nav-link">
                     <i class="fas fa-camera"></i>
-                    <span>Cameras</span>
+                    <span>Active Cameras</span>
                 </a>
             </li>
-            <li>
+            <!-- <li>
                 <a href="/rangers" class="nav-link">
                     <i class="fas fa-users"></i>
                     <span>Rangers</span>
                 </a>
-            </li>
+            </li> -->
             <li>
-                <a href="/reports" class="nav-link">
+                <a href="/detection-history" class="nav-link">
                     <i class="fas fa-chart-bar"></i>
-                    <span>Reports</span>
+                    <span>Detection History</span>
                 </a>
             </li>
-            <li>
+            <!-- <li>
                 <a href="/settings" class="nav-link">
                     <i class="fas fa-cog"></i>
                     <span>Settings</span>
                 </a>
-            </li>
+            </li> -->
         </ul>
         <!-- <div class="sidebar-footer">
             <div class="user-info">
@@ -147,6 +150,8 @@
     
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.socket.io/4.4.0/socket.io.min.js"></script>
     
     <!-- Custom JavaScript -->
     <script>
